2007-06-18  Kai Tietz  <Kai.Tietz@onevision.com>

	* rclex.c: (cpp_line): Add code_page pragma support.
	* windres.c: (usage, long_options, main): Add new option
	--codepage or -c.
	* winduni.c: (wind_default_codepage, wind_current_codepage): New.
	(unicode_from_ascii, ascii_from_unicode): Use
	wind_current_codepage as codepage parameter.
	(unicode_print): Print 4 characters for hexadecimal values in
	unicode strings.
	* winduni.h:  (wind_default_codepage, wind_current_codepage):
	Export.
	* doc/binutils.texi: Document new option.
	* NEWS: Mention new feature.

2007-06-18  Brian D. Watt <bwatt@us.ibm.com>

	* embedspu.sh: Parse _SPUEAR_ symbol values as hex.

2007-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ACLOCAL_AMFLAGS): Add -I ../config -I ../bfd.

	* acinclude.m4: Removed.

	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.

2007-06-11  Nathan Sidwell  <nathan@codesourcery.com>

	* dwarf.c (decode_location_expression): Add DW_OP_form_tls_address.

2007-06-06  Kai Tietz  <Kai.Tietz@onevision.com>

	PR binutils/4356 binutils/591
	* resrc.c (filename_need_quotes): New function.
	(look_for_default): If filename_need_quotes is true then quote the
	filename in the command line being created.
	(read_rc_file): Likewise.

2007-06-06  Ben Elliston  <bje@au.ibm.com>

	* doc/binutils.texi (objdump): Fix capitalisation of "PowerPC".

2007-06-05  Kai Tietz  <Kai.Tietz@onevision.com>

	* Makefile.am: Add LIBICONV to windres.
	* acinclude.m4: Added missing "lib-*.m4" and "lt*.m4" files.
	* configure.in: Add AC_CHECK_HEADER for iconv.h and use AM_ICONV.
	* config.in: Add ICONV defines.
	* aclocal.m4: Regenerate.
	* confugure: Regenerate.
	* winduni.c: (local_iconv_map codepages, wind_language_t,
	languages, unicode_is_valid_codepage, wind_find_language_by_id,
	wind_find_language_by_codepage, wind_find_codepage_info,
	unicode_from_codepage, codepage_from_unicode, iconv_onechar,